# mqtt-kafka-forwarding-service

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml  index.yaml  mqtt-kafka-forwarding-service-0.1.0.tgz  mqtt-kafka-forwarding-service-0.2.0.tgz
.github/workflows/: main.yaml
benchmark/: Cargo.toml  config.yaml  hivemq-config.xml
benchmark/src/: consume.rs  main.rs  message.rs  produce.rs  setup.rs
helm/mqtt-kafka-forwarding-service/: Chart.yaml  values.yaml
helm/mqtt-kafka-forwarding-service/templates/: _helpers.tpl  configmap.yaml  service.yaml  servicemonitor.yaml  sts.yaml
src/: api.rs  config.rs  kafka.rs  main.rs  metrics.rs  mqtt.rs
