[package]
name = "mqtt-kafka-forwarding-rust"
version = "0.1.0"
edition = "2021"
default-run = "forwarder"

[[bin]]
doc = true
name = "forwarder"
path = "src/main.rs"

[profile.release]
opt-level = 3
panic = "abort"

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync"]}
rumqttc = "0.11.0"
rdkafka = {version="0.28.0", features=["ssl", "libz-static"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
yaml-rust = "0.4.4"
serde_json = "1.0"
log = "0.4.14"
simple_logger = "2.1.0"
ctrlc = "3.2.1"
base64 = "0.13.0"


[workspace]
members = [
    "benchmark",
]
