[package]
name = "mqtt-kafka-forwarding-rust"
version = "0.1.0"
edition = "2021"
default-run = "forwarder"

[[bin]]
doc = true
name = "forwarder"
path = "src/main.rs"

[profile.release]
opt-level = 3
panic = "abort"

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync"]}
rumqttc = "0.23.0"
rdkafka = {version="0.36.2", features=["ssl", "libz-static"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
yaml-rust = "0.4.5"
serde_json = "1.0"
log = "0.4.20"
simple_logger = "4.3.3"
ctrlc = "3.4.2"
base64 = "0.21.7"
axum = {version="0.7.4"}
prometheus-client = "0.22.0"


[workspace]
members = [
    "benchmark",
]
