[package]
name = "mqtt-kafka-forwarding-rust"
version = "0.1.0"
edition = "2021"
default-run = "forwarder"

[[bin]]
doc = true
name = "forwarder"
path = "src/main.rs"

[profile.release]
opt-level = 3
panic = "abort"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync"]}
rumqttc = "0.25.1"
rdkafka = {version="0.39.0", features=["ssl", "libz-static"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
yaml-rust = "0.4.5"
serde_json = "1.0.149"
log = "0.4.29"
ctrlc = "3.5.1"
base64 = "0.22.1"
axum = {version="0.8.8"}
prometheus-client = "0.24.0"
lazy_static = "1.5.0"
env_logger = "0.11.8"


[workspace]
members = [
    "benchmark",
]
