[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync"]}
rumqttc = "0.11.0"
rdkafka = "0.28.0"
log = "0.4.14"
simple_logger = "2.1.0"
argh = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
