[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync"]}
rumqttc = "0.23.0"
rdkafka = "0.36.2"
log = "0.4.20"
simple_logger = "4.3.3"
argh = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.7"
