[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync"]}
rumqttc = "0.25.1"
rdkafka = "0.39.0"
log = "0.4.29"
simple_logger = "5.1.0"
argh = "0.1.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
